# Algorithms

./: CMakeLists.txt  README.md  nanobot_pr_test.txt
benchmarks/: CMakeLists.txt  bench_bit_vector.cpp  bench_dsu.cpp  bench_fenwick.cpp  bench_segtree.cpp
cmake/: FetchDependencies.cmake
include/: local.h
include/algebra/: bigint.h  mat.h  matrix.h  mod.h
include/data-structures/: bit.h  bit_vector.h  depq.h  dp.h  dsu.h  fenwick.h  hash_map.h  int_set.h  lazy_segtree.h  noam.h  rev_aug_treap.h  rev_treap.h  segtree.h  sparse.h
include/graphs/: blossom.h  dinic.h  matroid_intersection.h  mcmf.h
include/strings/: suffix_array.h
include/utils/: next_array.h  run_length.h
source/: template.cpp  template_interactive.cpp
source/algebra/: mat.h  mod.h  poly.h  sos.h  tridiagonal.h
source/data-structures/: aug_treap.h  bit.h  bit_vector.h  dsu.h  lazy_pq.h  lazy_segtree.h  offline_deletion.h  rev_aug_treap.h  rev_treap.h  rope.h  segtree.h  sparse.h  treap.h
source/geometry/: pt.h
source/graphs/: blossom.h  dinic.h  matroid_intersection.h  scc.h
test/algebra/: mod-test  mod-test.cpp  poly-test  poly-test.cpp
test/data-structures/: .gitignore  bit-test.cpp  dsu-test  dsu-test.cpp
tests/: CMakeLists.txt  rev_treap_test.cpp  test_bit_vector.cpp  test_fenwick.cpp  test_matrix.cpp  test_next_array.cpp  test_rev_aug_treap.cpp  test_run_length.cpp  test_segtree.cpp  treap_test.cpp
